Added basic layout for index.pug, to display all messages

--- a/views/index.pug
+++ b/views/index.pug
@@ -1,7 +1,17 @@
-extends layout
+doctype html
+html 
+  head
+    title  Mini message board
+    link(rel='stylesheet', href='/stylesheets/style.css')
+  body 
+    h1  #{title} 
+    p this is a paragraph 
+      a(href= 'http://www.theodinproject.com') this is the link text
+    
+    div
+      form(action='/', method='POST')
+        label(for='ourid', ) Name 
+        input(name= 'ourname', type='password', id='ourid', placeholder='Input something')
+        input(type='submit', value='Our value')
 
-block content
-  h1= title
-  -
-  each item in messsages
-  li #{item.name}
+      
