--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -6,3 +6,18 @@ body {
 a {
   color: #00b7ff;
 }
+
+.message-card {
+  background-color: #89b2db;
+  border-radius: 15px;
+  padding: 10px;
+  margin-top: 25px;
+  box-shadow: 5px 5px 8px #000000;
+}
+
+.message-form {
+  display: flex;
+  flex-direction: column;
+  gap: 25px;
+  max-width: fit-content;
+}
