--- a/views/form.pug
+++ b/views/form.pug
@@ -7,6 +7,6 @@ html
     
     form(method='POST' action='/new' class='message-form')
         textarea(name="messageText", cols="30", rows="10") 
-        input(type='text', name='user', placeholder='user')
+        input(type='text', name='messageUser', placeholder='user')
         input(type="submit", value='submit')
     
